--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
   max-width: 1440px;
   font-family: "Calibri Bold", AvenirNext, Avenir, -apple-system, BlinkMacSystemFont, "Roboto Slab", "Droid Serif", "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, Georgia, serif;
   box-sizing: border-box;
+  margin:0;
+  padding:0;
 }
 
 .nav-container {
@@ -102,35 +104,36 @@ body {
   font-size: 18px;
 }
 
-.latest-articles {
-  background-image: linear-gradient(to right, #888888 50%, #A0A0A0);
-  margin: 0;
-}
 
 .miss-articles {
   text-align: center;
   margin: 0 auto;
   font-size: 35px;
   line-height: 45px;
+  width:400px;
+  position:relative;
 }
 
 .seriously-btn {
   float: right;
+  border:1px solid  red;
   display: flex;
   margin-top: -130px;
   margin-right: 50px;
+  position:relative;
 }
 
 .serious-text {
   font-size: 20px;
-  color: white;
-  border: solid 1px white;
+  color: green;
+  border: solid 1px green;
   border-radius: 10px;
   padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 10px;
   padding-left: 20px;
   margin: 0;
+  position:relative;
 }
 
 .seriously-btn i {
@@ -145,3 +148,60 @@ body {
   padding-bottom: -10px;
   padding-left: 5px;
 }
+ .article-a {
+   display:block;
+   height:60px;
+   background-color: white;
+ }
+.article-b {
+  background-color: white;
+  width:150px;
+  margin-left: 120px;
+  margin-top: -50px;
+}
+
+
+
+.grid-container {
+display: grid;
+background-color: gray;
+grid-template-columns: 50% 50%;
+margin-top: -220px;
+}
+
+.grid-container img {
+  height:80px;
+  width:80px;
+  margin-left: 70px;
+}
+
+.grid-item {
+  border:1px solid green; 
+  padding-bottom: 50px;
+  padding-top: 200px;
+  
+}
+
+
+.mini-flex {
+  display:flex; 
+}
+
+
+.img-para,
+.img-para-b {
+  margin-left: 20px;
+  color:white;
+}
+
+.grid-container .para{
+  margin-left: 70px;
+  color:white;
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.grid-comment {
+  font-size: 15px;
+}
+
